package org.tp1.agence.grpc.server;

import io.grpc.stub.StreamObserver;
import net.devh.boot.grpc.server.service.GrpcService;
import org.springframework.beans.factory.annotation.Autowired;
import org.springframework.beans.factory.annotation.Value;
import org.tp1.agence.grpc.client.HotelGrpcClient;
import org.tp1.commun.grpc.agence.*;
import org.tp1.commun.grpc.hotel.*;

import java.util.ArrayList;
import java.util.List;

/**
 * Impl√©mentation du service gRPC pour l'agence
 * L'agence agr√®ge les r√©sultats de plusieurs h√¥tels
 */
@GrpcService
public class AgenceGrpcService extends AgenceServiceGrpc.AgenceServiceImplBase {

    @Autowired
    private HotelGrpcClient hotelGrpcClient;

    @Value("${agence.nom:Agence}")
    private String agenceName;

    @Value("${grpc.client.hotel-paris.address:}")
    private String hotelParisAddress;

    @Value("${grpc.client.hotel-lyon.address:}")
    private String hotelLyonAddress;

    @Value("${grpc.client.hotel-montpellier.address:}")
    private String hotelMontpellierAddress;

    /**
     * Ping pour v√©rifier que l'agence est op√©rationnelle
     */
    @Override
    public void ping(PingRequest request, StreamObserver<PingResponse> responseObserver) {
        try {
            PingResponse response = PingResponse.newBuilder()
                    .setMessage("Agence gRPC op√©rationnelle: " + agenceName)
                    .setStatus("OK")
                    .setTimestamp(System.currentTimeMillis())
                    .build();

            responseObserver.onNext(response);
            responseObserver.onCompleted();
        } catch (Exception e) {
            responseObserver.onError(io.grpc.Status.INTERNAL
                    .withDescription("Erreur lors du ping: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    /**
     * Rechercher des chambres dans tous les h√¥tels partenaires
     */
    @Override
    public void rechercherChambres(RechercheRequest request,
                                   StreamObserver<RechercheResponse> responseObserver) {
        try {
            System.out.println("üîç [Agence gRPC] Recherche de chambres - crit√®res: " + request);

            List<ChambreMessage> toutesLesChambres = new ArrayList<>();

            // Rechercher dans tous les h√¥tels disponibles
            List<String> hotels = getAvailableHotels();

            for (String hotelName : hotels) {
                List<ChambreMessage> chambres = hotelGrpcClient.rechercherChambres(hotelName, request);
                toutesLesChambres.addAll(chambres);
            }

            RechercheResponse response = RechercheResponse.newBuilder()
                    .addAllChambres(toutesLesChambres)
                    .build();

            System.out.println("‚úÖ [Agence gRPC] Total: " + toutesLesChambres.size() + " chambres trouv√©es");

            responseObserver.onNext(response);
            responseObserver.onCompleted();

        } catch (Exception e) {
            System.err.println("‚ùå [Agence gRPC] Erreur lors de la recherche: " + e.getMessage());
            e.printStackTrace();
            responseObserver.onError(io.grpc.Status.INTERNAL
                    .withDescription("Erreur lors de la recherche de chambres: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    /**
     * Effectuer une r√©servation dans un h√¥tel sp√©cifique
     */
    @Override
    public void effectuerReservation(AgenceReservationRequest request,
                                     StreamObserver<org.tp1.commun.grpc.hotel.ReservationResponse> responseObserver) {
        try {
            System.out.println("üè® [Agence gRPC] Tentative de r√©servation - chambre: " +
                             request.getChambreId() + " √† " + request.getHotelAdresse());

            // Construire la requ√™te pour l'h√¥tel
            org.tp1.commun.grpc.hotel.ReservationRequest hotelRequest =
                    org.tp1.commun.grpc.hotel.ReservationRequest.newBuilder()
                    .setChambreId(request.getChambreId())
                    .setDateArrive(request.getDateArrive())
                    .setDateDepart(request.getDateDepart())
                    .setNomClient(request.getNomClient())
                    .setPrenomClient(request.getPrenomClient())
                    .setNumeroCarteBancaire(request.getNumeroCarteBancaire())
                    .build();

            // D√©terminer l'h√¥tel cible selon l'adresse
            String hotelName = getHotelNameFromAddress(request.getHotelAdresse());

            if (hotelName == null) {
                org.tp1.commun.grpc.hotel.ReservationResponse errorResponse =
                        org.tp1.commun.grpc.hotel.ReservationResponse.newBuilder()
                        .setSuccess(false)
                        .setMessage("H√¥tel non trouv√© pour l'adresse: " + request.getHotelAdresse())
                        .build();

                responseObserver.onNext(errorResponse);
                responseObserver.onCompleted();
                return;
            }

            // Effectuer la r√©servation via le client gRPC
            org.tp1.commun.grpc.hotel.ReservationResponse response =
                    hotelGrpcClient.effectuerReservation(hotelName, hotelRequest);

            if (response.getSuccess()) {
                System.out.println("‚úÖ [Agence gRPC] R√©servation effectu√©e avec succ√®s");
            } else {
                System.out.println("‚ùå [Agence gRPC] √âchec de la r√©servation: " + response.getMessage());
            }

            responseObserver.onNext(response);
            responseObserver.onCompleted();

        } catch (Exception e) {
            System.err.println("‚ùå [Agence gRPC] Erreur lors de la r√©servation: " + e.getMessage());
            e.printStackTrace();
            responseObserver.onError(io.grpc.Status.INTERNAL
                    .withDescription("Erreur lors de la r√©servation: " + e.getMessage())
                    .asRuntimeException());
        }
    }

    /**
     * Obtenir la liste des h√¥tels disponibles pour cette agence
     */
    private List<String> getAvailableHotels() {
        List<String> hotels = new ArrayList<>();

        if (hotelParisAddress != null && !hotelParisAddress.isEmpty()) {
            hotels.add("paris");
        }
        if (hotelLyonAddress != null && !hotelLyonAddress.isEmpty()) {
            hotels.add("lyon");
        }
        if (hotelMontpellierAddress != null && !hotelMontpellierAddress.isEmpty()) {
            hotels.add("montpellier");
        }

        return hotels;
    }

    /**
     * D√©terminer le nom de l'h√¥tel √† partir de l'adresse
     */
    private String getHotelNameFromAddress(String address) {
        if (address == null) {
            return null;
        }

        String lowerAddress = address.toLowerCase();
        if (lowerAddress.contains("paris")) {
            return "paris";
        } else if (lowerAddress.contains("lyon")) {
            return "lyon";
        } else if (lowerAddress.contains("montpellier")) {
            return "montpellier";
        }

        return null;
    }

    /**
     * Obtenir les chambres r√©serv√©es de tous les h√¥tels
     */
    @Override
    public void getChambresReservees(org.tp1.commun.grpc.agence.ChambresReserveesRequest request,
                                     StreamObserver<ChambresReserveesParHotelResponse> responseObserver) {
        try {
            System.out.println("üìã [Agence gRPC] R√©cup√©ration des chambres r√©serv√©es de tous les h√¥tels");

            List<HotelChambresReservees> hotelsList = new ArrayList<>();

            // R√©cup√©rer les chambres r√©serv√©es de chaque h√¥tel disponible
            List<String> hotels = getAvailableHotels();

            for (String hotelName : hotels) {
                try {
                    List<ChambreMessage> chambres = hotelGrpcClient.getChambresReservees(hotelName);

                    if (!chambres.isEmpty()) {
                        // Obtenir le nom de l'h√¥tel depuis la premi√®re chambre
                        String hotelNom = chambres.get(0).getHotelNom();

                        HotelChambresReservees hotelChambres = HotelChambresReservees.newBuilder()
                                .setHotelNom(hotelNom)
                                .addAllChambres(chambres)
                                .build();

                        hotelsList.add(hotelChambres);
                    }
                } catch (Exception e) {
                    System.err.println("‚ùå [Agence gRPC] Erreur pour l'h√¥tel " + hotelName + ": " + e.getMessage());
                }
            }

            ChambresReserveesParHotelResponse response = ChambresReserveesParHotelResponse.newBuilder()
                    .addAllHotels(hotelsList)
                    .build();

            System.out.println("‚úÖ [Agence gRPC] Chambres r√©serv√©es r√©cup√©r√©es pour " + hotelsList.size() + " h√¥tel(s)");

            responseObserver.onNext(response);
            responseObserver.onCompleted();

        } catch (Exception e) {
            System.err.println("‚ùå [Agence gRPC] Erreur lors de la r√©cup√©ration des chambres r√©serv√©es: " + e.getMessage());
            e.printStackTrace();
            responseObserver.onError(io.grpc.Status.INTERNAL
                    .withDescription("Erreur lors de la r√©cup√©ration des chambres r√©serv√©es: " + e.getMessage())
                    .asRuntimeException());
        }
    }
}
